--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,24 @@ body {
   background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.2);
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.footerwheel {
+  padding-top: 8px;
+  animation: spin 2s linear infinite;
+  transition: all 0.3s ease-in-out;
+}
+
+.footerwheel:hover {
+  animation-play-state: paused;
+  cursor: pointer;
+  color: #e6a600;
+}
